--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6619,3 +6619,11 @@ a.thumbnail.active {
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+.center-block {
+  width: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0;
+  padding-right: 0;
+  list-style: none;
+}
